루프 쪼개기 java8 에 맞게끔 변경함